--- a/SyllableApplication/view/index.html
+++ b/SyllableApplication/view/index.html
@@ -6,7 +6,6 @@
     <title>Lists</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 </head>
-<h3>Information tables</h3>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -57,15 +56,14 @@
 
         // CREATE DYNAMIC TABLE.
         var table = document.createElement("table");
-        table.setAttribute("Class", "table table-hover");
-        table.setAttribute("style", "width:500px");
-
+        table.setAttribute("Class", "table table-hover container-fluent");
         // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
 
         var tr = table.insertRow(-1);                   // TABLE ROW.
 
         for (var i = 0; i < col.length; i++) {
-            var th = document.createElement("th");      // TABLE HEADER.
+            var th = document.createElement("th");
+            // TABLE HEADER.
             th.innerHTML = col[i];
             tr.appendChild(th);
         }
@@ -97,7 +95,7 @@
 
         $.ajax({
             type: "DELETE",
-            contentType : "application/json",
+            contentType: "application/json",
             url: "http://syllableapp.local/word/" + id,
             // dataType: "json",
             success: function (data) {
@@ -110,10 +108,12 @@
         })
 
     }
-    function updateElement(id){
+
+    function updateElement(id) {
         console.log(id);
     }
-    function patternList(){
+
+    function patternList() {
         $(document).ready(function () {
             $(function () {
                 $.ajax({
@@ -131,7 +131,8 @@
             });
         });
     }
-    function wordList(){
+
+    function wordList() {
         $(document).ready(function () {
             $(function () {
                 $.ajax({
@@ -152,8 +153,14 @@
 </script>
 
 <body>
+<div >
+    <h3>Information tables</h3>
 
-<button id="wordShow" name="submit" onclick="patternList()" type="button">Pattern list</button>
-<button id="submit" name="submit"   onclick="wordList()" type="button">Word List</button>
-<div id="showData"></div>
+    <button id="wordShow" name="submit" onclick="patternList()" type="button">Pattern list</button>
+    <button id="submit" name="submit" onclick="wordList()" type="button">Word List</button>
+    <div  id="showData"></div>
+
+
+</div>
+
 </body>
